tests/NormalTests/paczka1/fuzzy1/14532541.err
Error in line 1: IkLY S544 31,3
Error in line 2: IkLY A314 751,9
Error in line 5: ViroVxNfDi A277 84,1
Error in line 14: 5iw6q0lEYvs A314 71,02
Error in line 11: eCWLrH6Z88j A911 52,6
Error in line 23: rrUTO0Zvva6 S544 16,92
Error in line 22: rrUTO0Zvva6 A277 41,9
Error in line 17: 5iw6q0lEYvs A314 250,6
